--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,9 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  background-color: #181818;
+  font-size: 17px;
+  color: #fff;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  height: 100vh;
 }
